tests/ui/parser/misspelled-keywords/while-loop.rs
fn main() {
    whilee a < b {
    //~^ ERROR expected one of
    }
}
